cabal-version:       >=1.10

name:                yuki
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              Samuel Durante
maintainer:          samueldurante.h@gmail.com
-- copyright:
-- category:
build-type:          Simple

executable yuki
  main-is:             Main.hs
  build-depends:       base >=4.14 && <4.15
                     , dotenv
                     , text
                     , yuki
  hs-source-dirs:      app

library
  main-is:             Yuki.hs
  exposed-modules:     Yuki
                     , Yuki.Reply
                     , Yuki.Commands
                     , Yuki.Commands.Ping
                     , Yuki.Commands.Weather
                     , Yuki.Commands.Together
  build-depends:       base >=4.14 && <4.15
                     , aeson
                     , utf8-string
                     , dotenv
                     , http-client
                     , http-client-tls
                     , rio
                     , discord-haskell <= 1.8.8
                     , text
                     , unliftio
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , ExtendedDefaultRules
                     , DeriveGeneric
                     , BlockArguments
